	(slime-set-package): Ditto.
	
2008-03-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (classify-symbol, symbol-classification->string): Add
	classification of symbols denoting type specifier, and denoting
	constants.
	
2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-eval-macroexpand): Indent expansion.
	
2008-03-14  Helmut Eller  <heller@common-lisp.net>

	Move filename translation code to contrib.

	* slime.el (slime-find-filename-translators)
	(slime-filename-translations): Move to contrib/slime-tramp.el.
	(slime-to-lisp-filename-function)
	(slime-from-lisp-filename-function): New variables.

2008-03-14  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-repl-return-behaviour): Deleted.  Rebind
	the key if you don't like what the command does.

2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-edit-definition-cont): If no definition could
	be found, print also the package name in the error message where
	the definition was tried to be found in.
	
2008-03-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-region-for-defun-function): Deleted.
	(slime-region-for-defun-at-point): Use beginning-of-defun
	and not beginning-of-sexp.
	(slime-flash-region): New function.
	(slime-compile-region): Use it.

2008-03-13  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-xref-group): Renamed from slime-location-to-string.
	Handle source-form locations.

2008-03-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-find-definitions-function): Renamed from
	slime-edit-definition-fallback-function.
	(slime-find-definitions): Use it.
	(slime-find-tag-if-tags-table-visited): Deleted.

2008-03-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-inspector-operate-on-point): Signal an error if
	there is no object to operate on.

2008-03-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-toggle-details): Inhibit point-motion-hooks.